<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- HEADER -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@color/black"
        android:text="@string/malikverse"
        android:paddingTop="19sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:shadowColor="@color/black"/>

    <!-- SCROLL CONTENT -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- CARD LED CONTROL -->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_outline"
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/led_icon"
                    android:src="@drawable/led_onnn"/>
                <Button
                    android:id="@+id/btnLed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/led"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- FAN CONTROL -->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_outline"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/fan_icon"
                    android:src="@drawable/fannnn"/>
                <Button
                    android:id="@+id/btnFan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/fan"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>


            <!-- WIP CONTROL -->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_outline"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/wip_icon"
                    android:src="@drawable/workinprogres"/>
                <Button
                    android:id="@+id/btnWip1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/wip"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- WIP CONTROL -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border_outline"
                android:backgroundTint="@color/white"
                android:elevation="4dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/wip_icon"
                    android:src="@drawable/workinprogres"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/purple_500"
                    android:text="@string/wip"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            
        </LinearLayout>
    </ScrollView>



</LinearLayout>
