<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- Header -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/black"
        android:paddingTop="19dp"
        android:text="@string/fan_control"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Konten ScrollView -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Baris 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Item 1 -->
                <LinearLayout
                    android:layout_width="162dp"
                    android:layout_height="155dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_outline"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="7dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/led_icon"
                        android:scaleType="centerInside"
                        android:src="@drawable/fan_off_new" />

                    <Button
                        android:id="@+id/btnLed1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/fan"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Item 2 -->
                <LinearLayout
                    android:layout_width="162dp"
                    android:layout_height="155dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_outline"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="7dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/led_icon"
                        android:scaleType="centerInside"
                        android:src="@drawable/fan_off_new" />

                    <Button
                        android:id="@+id/btnLed2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/fan"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!-- Baris 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Item 3 -->
                <LinearLayout
                    android:layout_width="162dp"
                    android:layout_height="155dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_outline"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="7dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/led_icon"
                        android:scaleType="centerInside"
                        android:src="@drawable/fan_off_new" />

                    <Button
                        android:id="@+id/btnLed3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/fan"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Item 4 -->
                <LinearLayout
                    android:layout_width="162dp"
                    android:layout_height="155dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_outline"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="7dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/led_icon"
                        android:scaleType="centerInside"
                        android:src="@drawable/fan_off_new" />

                    <Button
                        android:id="@+id/btnLed4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/fan"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
